--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/icons/E-BANK-Logo.svg"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-BANK</title>
+    <title>E-BANK | Everything You Need.</title>
   </head>
   <body>
     <div id="root"></div>
