add corsProductionConfigs to the server

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/icons/E-BANK-Logo.svg"
+      href="/src/assets/icons/E-BANK-Logo.svg"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
