add scrollbar styles to the root element

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  class="scrollbar-thin scrollbar-track-transparent scrollbar-thumb-blue-500"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <link
